[gd_scene load_steps=11 format=3 uid="uid://c2yrsa2eg1grp"]

[ext_resource type="Script" uid="uid://dva87hu8ndd27" path="res://scenes/bubbles/bubble.gd" id="1_jkl1b"]
[ext_resource type="Texture2D" uid="uid://bb4erer75skf8" path="res://assets/Bubbles/Bubble3x3.png" id="1_pa6aa"]
[ext_resource type="PackedScene" uid="uid://b263m705smxsq" path="res://scenes/bubbles/houseNew.tscn" id="2_60m1a"]
[ext_resource type="Texture2D" uid="uid://5bccpb5sevfc" path="res://assets/Bubbles/Bubble5x5.png" id="3_gkbh5"]
[ext_resource type="PackedScene" uid="uid://bjxdp7ek2w8kv" path="res://scenes/porter/porter.tscn" id="3_taa85"]
[ext_resource type="Texture2D" uid="uid://3b0okmv40a78" path="res://assets/Bubbles/BubbleConstSite.png" id="4_4py6g"]
[ext_resource type="Texture2D" uid="uid://wd66sven8161" path="res://assets/Bubbles/Bubble7x7.png" id="4_60m1a"]
[ext_resource type="Texture2D" uid="uid://c05g5nvgd3ky6" path="res://assets/Bubbles/Bubble3x3BG.png" id="7_4py6g"]
[ext_resource type="Texture2D" uid="uid://cm0idkls2uae6" path="res://assets/Bubbles/Bubble5x5BG.png" id="8_br2ov"]
[ext_resource type="Texture2D" uid="uid://bwpsya2nplumx" path="res://assets/Bubbles/Bubble7x7BG.png" id="9_taa85"]

[node name="Bubble" type="Node2D"]
script = ExtResource("1_jkl1b")
house_scene = ExtResource("2_60m1a")
porter_scene = ExtResource("3_taa85")

[node name="bubbleConstrSite" type="Sprite2D" parent="."]
visible = false
z_index = 2
texture_filter = 1
texture = ExtResource("4_4py6g")

[node name="bubble3x3" type="Sprite2D" parent="."]
visible = false
z_index = 2
texture_filter = 1
texture = ExtResource("1_pa6aa")

[node name="bubble5x5" type="Sprite2D" parent="."]
visible = false
z_index = 2
texture_filter = 1
texture = ExtResource("3_gkbh5")

[node name="bubble7x7" type="Sprite2D" parent="."]
visible = false
z_index = 2
texture_filter = 1
texture = ExtResource("4_60m1a")

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[node name="BG" type="Node2D" parent="."]
visible = false
z_as_relative = false

[node name="BG3x3" type="Sprite2D" parent="BG"]
visible = false
z_as_relative = false
texture_filter = 1
texture = ExtResource("7_4py6g")

[node name="BG5x5" type="Sprite2D" parent="BG"]
visible = false
z_as_relative = false
texture_filter = 1
texture = ExtResource("8_br2ov")

[node name="BG7x7" type="Sprite2D" parent="BG"]
visible = false
z_as_relative = false
texture_filter = 1
texture = ExtResource("9_taa85")

[node name="houses" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
